--- a/style.css
+++ b/style.css
@@ -9,20 +9,17 @@ html {
     font-size: 10px;
 }
 
-body {
-    background: rgb(4, 50, 101);
-    background: radial-gradient(circle, rgba(4, 50, 101, 1) 0%, rgba(0, 51, 107, 1) 8%, rgba(10, 49, 93, 1) 21%, rgba(0, 43, 209, 1) 25%, rgba(24, 0, 27, 1) 69%, rgba(20, 12, 27, 1) 83%);
-}
-
 .nav {
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0rem 1rem;
-    /* background-color: rgba(0, 0, 0, 0.849); */
+    background-color: #140c1b;
     color: white;
     height: 15vh;
     font-family: sans-serif;
+    z-index: 1;
 }
 
 .logo {
@@ -78,6 +75,11 @@ body {
 
 .list li:hover{
     color: black;
+}
+
+main{
+    background: rgb(4, 50, 101);
+    background: radial-gradient(circle, rgba(4, 50, 101, 1) 0%, rgba(0, 51, 107, 1) 8%, rgba(10, 49, 93, 1) 21%, rgba(0, 43, 209, 1) 25%, rgba(24, 0, 27, 1) 69%, rgba(20, 12, 27, 1) 83%);
 }
 
 #page-1 {
@@ -186,9 +188,6 @@ body {
     transition: all ease-in 0.8s;
 }
 
-.about:hover .card{
-    filter: blur(10px);
-}
 
 .about .card:hover{
     filter: blur(0px);
@@ -487,6 +486,72 @@ body {
 
 .right-con button:hover{
     background-color: #217c24;
+}
+
+
+footer{
+    z-index: -1;
+    position: relative;
+}
+
+.footer{
+    background-color: black;
+    width: 100%;
+    height: 40vh;
+    margin-top: 15rem;
+    padding: 4rem;
+    position: fixed;
+    top: 25%;
+    z-index: -1;
+}
+
+.content{
+    height: 32vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    gap: 4rem;
+}
+
+.content h1{
+    color: white;
+    font-size: 6rem;
+}
+
+.email{
+    /* background-color: red; */
+    width: 50vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.email a{
+    font-size: 3rem;
+    color: white;
+    text-decoration: none;
+}
+
+.connect{
+    border-top: 1px solid rgba(255, 255, 255, 0.473);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 6rem;
+}
+
+.connect a{
+    width: 1rem;
+}
+
+.connect svg{
+    width: 3rem;
+}
+
+#page-6{
+    height: 50vh;
+    background-color: transparent;
 }
 
 @media screen and (max-width: 1024px) {
